[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/main/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/main/sprites/road.png" type="Texture" id=2]
[ext_resource path="res://scenes/arrow_button/ArrowButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://spriteframes/arrow_left_frames.tres" type="SpriteFrames" id=4]
[ext_resource path="res://spriteframes/arrow_right_frames.tres" type="SpriteFrames" id=5]
[ext_resource path="res://scenes/conductor/Conductor.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/main/SpawnPosition.gd" type="Script" id=7]
[ext_resource path="res://sounds/musics/Myths You Forgot (feat. Toby Fox).ogg" type="AudioStream" id=8]
[ext_resource path="res://scenes/note/Note.tscn" type="PackedScene" id=9]
[ext_resource path="res://fonts/HeartbitXX.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://fonts/HeartbitXX2Px.ttf" type="DynamicFontData" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 213, 6 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 11 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
note = ExtResource( 9 )

[node name="Lane" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 3.22907, 3.22907 )
texture = ExtResource( 2 )

[node name="UpArrow" parent="." instance=ExtResource( 3 )]
position = Vector2( 512, 535 )
input = "up"

[node name="RightArrow" parent="." instance=ExtResource( 3 )]
position = Vector2( 642, 535 )
frames = ExtResource( 5 )
input = "right"

[node name="LeftArrow" parent="." instance=ExtResource( 3 )]
position = Vector2( 382, 535 )
frames = ExtResource( 4 )
input = "left"

[node name="Conductor" parent="." instance=ExtResource( 6 )]
stream = ExtResource( 8 )

[node name="SpawnPosition" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Left" type="Position2D" parent="SpawnPosition"]
position = Vector2( 382, 0 )

[node name="Up" type="Position2D" parent="SpawnPosition"]
position = Vector2( 512, 0 )

[node name="Right" type="Position2D" parent="SpawnPosition"]
position = Vector2( 642, 0 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 512, 700 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 131.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboLabel" type="Label" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 300.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "Combo"

[connection signal="beat" from="Conductor" to="." method="_on_Conductor_beat"]
[connection signal="measure" from="Conductor" to="." method="_on_Conductor_measure"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
